refactor: translation API resp mgs,swagger config
